Release v1.1.0, contains breaking changes!!! - breaking: remove isValid method in favor of new validate method - breaking: add signature field to InitData - breaking: remove extra property from types. - breaking: upgraded to java 17 - add properties property to types . - add initData validation using telegram public key (validate3rd) - add null values check in json parser