@@ -1,11 +1,14 @@
 package io.github.sanvew.tg.init.data.type;
 
+import io.github.sanvew.tg.init.data.exception.PropertyMissingException;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.net.URI;
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -14,10 +17,11 @@ import java.util.stream.Collectors;
  * <p>
  * Supports known fields such as {@code added_to_attachment_menu}, {@code allows_write_to_pm}, {@code is_premium},
  * {@code first_name}, {@code id}, {@code is_bot}, {@code last_name}, {@code language_code}, {@code photo_url} and {@code username},
- * and allows storing unknown extra fields as a map via {@link #getExtra()}.
+ * and exposes every populated property via {@link #getProperties()}.
  *
  * @see <a href="https://docs.telegram-mini-apps.com/platform/init-data#user">Telegram Mini Apps Init Data: Chat</a>
- */public class User {
+ */
+public class User {
     public enum Property {
         ADDED_TO_ATTACHMENT_MENU("added_to_attachment_menu"),
         ALLOWS_WRITE_TO_PM ("allows_write_to_pm"),
@@ -46,6 +50,7 @@ import java.util.stream.Collectors;
         }
     }
 
+    private final Map<String, Object> properties;
     private final Boolean addedToAttachmentMenu;
     private final Boolean allowsWriteToPm;
     private final Boolean isPremium;
@@ -54,9 +59,8 @@ import java.util.stream.Collectors;
     private final Boolean isBot;
     private final String lastName;
     private final String languageCode;
-    private final String photoUrl;
+    private final URI photoUrl;
     private final String username;
-    private final Map<String, String> extra;
 
     public User(
             @Nullable Boolean addedToAttachmentMenu,
@@ -67,21 +71,69 @@ import java.util.stream.Collectors;
             @Nullable Boolean isBot,
             @Nullable String lastName,
             @Nullable String languageCode,
-            @Nullable String photoUrl,
+            @Nullable URI photoUrl,
             @Nullable String username,
             @Nullable Map<String, String> extra
     ) {
+        final Map<String, Object> props = new HashMap<>();
+
         this.addedToAttachmentMenu = addedToAttachmentMenu;
+        if (addedToAttachmentMenu != null) {
+            props.put(Property.ADDED_TO_ATTACHMENT_MENU.value, this.addedToAttachmentMenu);
+        }
+
         this.allowsWriteToPm = allowsWriteToPm;
+        if (allowsWriteToPm != null) {
+            props.put(Property.ALLOWS_WRITE_TO_PM.value, this.allowsWriteToPm);
+        }
+
         this.isPremium = isPremium;
+        if (isPremium != null) {
+            props.put(Property.IS_PREMIUM.value, this.isPremium);
+        }
+
+        if (firstName == null) {
+            throw new PropertyMissingException("firstName");
+        }
         this.firstName = firstName;
+        props.put(Property.FIRST_NAME.value, this.firstName);
+
         this.id = id;
+        props.put(Property.ID.value, this.id);
+
         this.isBot = isBot;
+        if (isBot != null) {
+            props.put(Property.IS_BOT.value, this.isBot);
+        }
+
         this.lastName = lastName;
+        if (lastName  != null) {
+            props.put(Property.LAST_NAME.value, this.lastName);
+        }
+
         this.languageCode = languageCode;
+        if (languageCode != null) {
+            props.put(Property.LANGUAGE_CODE.value, this.languageCode);
+        }
+
         this.photoUrl = photoUrl;
+        if (photoUrl != null) {
+            props.put(Property.PHOTO_URL.value, this.photoUrl);
+        }
+
         this.username = username;
-        this.extra = extra == null ? Map.of() : extra;
+        if (username != null) {
+            props.put(Property.USERNAME.value, this.username);
+        }
+
+        if (extra != null) {
+            for (final Map.Entry<String, String> entry: extra.entrySet()) {
+                if (Property.isNotKnown(entry.getKey()) && entry.getValue() != null) {
+                    props.put(entry.getKey(), entry.getValue());
+                }
+            }
+        }
+        this.properties = Collections.unmodifiableMap(props);
     }
 
     public User(
@@ -93,7 +145,7 @@ import java.util.stream.Collectors;
             @Nullable Boolean isBot,
             @Nullable String lastName,
             @Nullable String languageCode,
-            @Nullable String photoUrl,
+            @Nullable URI photoUrl,
             @Nullable String username
     ) {
         this(
@@ -102,57 +154,53 @@ import java.util.stream.Collectors;
         );
     }
 
-    public @Nullable Boolean isAddedToAttachmentMenu() { return addedToAttachmentMenu; }
-    public @Nullable Boolean allowsWriteToPm() { return allowsWriteToPm; }
-    public @Nullable Boolean isPremium() { return isPremium; }
-    public @NotNull String getFirstName() { return firstName; }
-    public long getId() { return id; }
-    public @Nullable Boolean isBot() { return isBot; }
-    public @Nullable String getLastName() { return lastName; }
-    public @Nullable String getLanguageCode() { return languageCode; }
-    public @Nullable String getPhotoUrl() { return photoUrl; }
-    public @Nullable String getUsername() { return username; }
-    public @NotNull Map<String, String> getExtra() { return extra; }
+    public @NotNull Map<String, Object> getProperties() {
+        return properties;
+    }
+    public @Nullable Boolean isAddedToAttachmentMenu() {
+        return addedToAttachmentMenu;
+    }
+    public @Nullable Boolean allowsWriteToPm() {
+        return allowsWriteToPm;
+    }
+    public @Nullable Boolean isPremium() {
+        return isPremium;
+    }
+    public @NotNull String getFirstName() {
+        return firstName;
+    }
+    public long getId() {
+        return id;
+    }
+    public @Nullable Boolean isBot() {
+        return isBot;
+    }
+    public @Nullable String getLastName() {
+        return lastName;
+    }
+    public @Nullable String getLanguageCode() {
+        return languageCode;
+    }
+    public @Nullable URI getPhotoUrl() {
+        return photoUrl;
+    }
+    public @Nullable String getUsername() {
+        return username;
+    }
 
     @Override
     public boolean equals(Object o) {
         if (!(o instanceof User)) return false;
-        User user = (User) o;
-        return id == user.id
-                && Objects.equals(addedToAttachmentMenu, user.addedToAttachmentMenu)
-                && Objects.equals(allowsWriteToPm, user.allowsWriteToPm)
-                && Objects.equals(isPremium, user.isPremium)
-                && Objects.equals(firstName, user.firstName)
-                && Objects.equals(isBot, user.isBot)
-                && Objects.equals(lastName, user.lastName)
-                && Objects.equals(languageCode, user.languageCode)
-                && Objects.equals(photoUrl, user.photoUrl)
-                && Objects.equals(username, user.username)
-                && Objects.equals(extra, user.extra);
+        return this.properties.equals(((User) o).properties);
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(
-                addedToAttachmentMenu, allowsWriteToPm, isPremium, firstName, id, isBot, lastName, languageCode,
-                photoUrl, username, extra
-        );
+        return this.properties.hashCode();
     }
 
     @Override
     public String toString() {
-        return "User{" +
-                "addedToAttachmentMenu=" + addedToAttachmentMenu +
-                ", allowsWriteToPm=" + allowsWriteToPm +
-                ", isPremium=" + isPremium +
-                ", firstName='" + firstName + '\'' +
-                ", id=" + id +
-                ", isBot=" + isBot +
-                ", lastName='" + lastName + '\'' +
-                ", languageCode='" + languageCode + '\'' +
-                ", photoUrl='" + photoUrl + '\'' +
-                ", username='" + username + '\'' +
-                ", extra=" + extra +
-                '}';
+        return this.properties.toString();
     }
 }
